[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayButton" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -70.0
margin_right = 75.0
margin_bottom = -30.0
text = "Play"

[node name="ExtrasButton" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -20.0
margin_right = 75.0
margin_bottom = 20.0
text = "Extras"

[node name="CreditsButton" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 30.0
margin_right = 75.0
margin_bottom = 70.0
text = "Credits"

[node name="QuitButton" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 80.0
margin_right = 75.0
margin_bottom = 120.0
text = "Exit"

[node name="CreditsMenu" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Credits" type="RichTextLabel" parent="CreditsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -300.0
margin_right = 250.0
margin_bottom = 300.0
custom_constants/line_separation = 5
bbcode_enabled = true
bbcode_text = "[center]
[color=#53a4e0]GAME CREATED BY[/color]
Hedgein
Rorazoro

[color=#53a4e0]PHONEBOOTH CREATED BY[/color]
Hedgein

[color=#53a4e0]PHONEBOOTH MONSTER CREATED BY[/color]
Hedgein

[color=#53a4e0]ENGINE USED[/color]
Godot 3.5

[color=#53a4e0]PREMADE ASSETS USED[/color]
Kenney RPG Urban Pack

[/center]"
text = "
GAME CREATED BY
Hedgein
Rorazoro

PHONEBOOTH CREATED BY
Hedgein

PHONEBOOTH MONSTER CREATED BY
Hedgein

ENGINE USED
Godot 3.5

PREMADE ASSETS USED
Kenney RPG Urban Pack

"

[node name="CreditsBackButton" type="Button" parent="CreditsMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -60.0
margin_right = 170.0
margin_bottom = -20.0
text = "Back"

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/ExtrasButton" to="." method="_on_ExtrasButton_pressed"]
[connection signal="pressed" from="MainMenu/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsBackButton" to="." method="_on_CreditsBackButton_pressed"]
